[tool.poetry]
name = "yatsm"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <daniel.martins@lumedigital.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"
typer = "^0.1.1"
dramatiq = {extras = ["redis"], version = "^1.8.1"}
fastapi = "^0.54.1"
walrus = "^0.8.1"
uvicorn = "^0.11.3"
pendulum = "^2.1.0"
apscheduler = "^3.6.3"
redis = "3.2.1"
pyjwt = "^1.7.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
httpie = "^2.1.0"
black = "^19.10b0"
isort = "^4.3.21"
assertpy = "^1.0"
pytest-mock = "^3.1.0"
birdisle = "^0.1.3"

[tool.poetry.scripts]
yatsm = 'yatsm.cli:app'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

